# Tankist

./: .gitignore
doc/: Спецификация.docx
install/: create_links.bat
scripts/: full_install.bat  full_install.sh
scripts/Linux/: assembly.sh
scripts/Linux/_old/: CMakeLists.txt  build.py  build.sh  build_PiEngine.sh  build_SimpleBall.sh  build_libs.sh  re_build.sh  update_build.sh
scripts/Linux/_old/PiEngine/: CMakeLists.txt
scripts/Linux/_old/TacticsVictory/TacticsVictory/: CMakeLists.txt
scripts/Linux/_old/Tankist/: make_build_debug.sh
scripts/Linux/_old/Tankist/_old/: runUploader.sh
scripts/Linux/_old/Tankist/_old/Hangar/: CMakeLists.txt
scripts/Linux/_old/Tankist/_old/Server/: CMakeLists.txt
scripts/Urho3D/: buildUrho3d.bat  buildUrho3d.sh
scripts/Windows/: build.bat  build.py  edit.bat  make.bat  run.bat
scripts/Windows/old/: clear.bat
scripts/Windows/proc/: proc_make.bat
scripts/install/: create_links.bat  create_links.sh
scripts/install/Urho3D/: assembly.bat  assembly.sh  assembly.sh.save  build.bat  make.bat
src/: AddPathsToLibraries.cmake  CMakeLists.txt  CopyToDirDLL.cmake  CopyToDirEXE.cmake  Install.cmake  LinkLibraries.cmake  SetWorkingDirectory.cmake
src/common/Battle/: Battle.cpp  Battle.h  BattleHandlers.cpp  CMakeLists.txt  Server.cpp  Server.h  defines.h  glob_engine.cpp  glob_engine.h  glob_game.cpp  glob_game.h  globals.cpp  globals.h  stdafx.h
src/common/Battle/Network/: GameMessagesServer.cpp  HandlersNetworkEventsServer.cpp  HeadConnection.h  MainServer.h  SServer.cpp  SServer.h  Server.cpp  Server.h
src/common/Configurator/: CMakeLists.txt
src/common/Hangar/: CMakeLists.txt  Chat.cpp  Chat.h  Hangar.cpp  Hangar.h  globals.cpp  globals.h  stdafx.h
src/common/Hangar/Network/: HandlersNetworkEventsHangar.cpp
src/common/Monitor/: CMakeLists.txt
src/common/Uploader/: CMakeLists.txt  Uploader.cpp  Uploader.h  globals.h
src/common_files/: C4PrefixLinux.h  GameInput.cpp  GameInput.h  _defines.h
src/common_files/FileSystem/: _ConfigurationFile.cpp  _FileSystem.cpp  _FileSystem.h  _ListFiles.cpp
src/common_files/Game/: _Cameras.cpp  _Cameras.h  _GameWorld.cpp  _GameWorld.h
src/common_files/Input/: _Input.h
src/common_files/Network/: _HangarServer.cpp  _HangarServer.h  _MasterServer.h  _SocketsTCP.cpp
src/common_files/Network/Game/: TConnection.cpp  _DataNetwork.cpp  _DataNetwork.h  _GameMessages.cpp  _GameMessages.h  _GameMessagesID.h  _TConnection.h
src/common_files/Network/GameServer/: _ClientServer.cpp  _ClientServer.h  _GameMessages.h  _GameServer.h  _HeadServer.cpp  _HeadServer.h
src/common_files/Network/Messages/: _MessagesHangar.cpp  _MessagesHangar.h  _MessagesServer.cpp  _MessagesServer.h
src/common_files/Network/Other/: _MasterServer.cpp  _MasterServer.h  _SocketsTCP.h
src/common_files/Objects/: _GameObjects.cpp  _GameObjects.h  _GamePlayer.h  _Vehicle.cpp  _Vehicle.h
src/common_files/Scene/: _GameScene.cpp  _GameScene.h
src/common_files/Scene/Cameras/: _MainCamera.cpp  _MainCamera.h
src/common_files/Scene/Objects/: _ObjectState.cpp  _ObjectState.h  _Vehicle.cpp  _Vehicle.h
src/common_files/Utils/: _Log.cpp  _LogU.cpp  _LogU.h  _LogU3D.h  _StringUtils.cpp  _StringUtils.h
src/local/Battler/: Battler.cpp  Battler.h  BattlerHanders.cpp  BattlerHandlers.cpp  CMakeLists.txt  Client.cpp  Client.h  CommonFunctions.cpp  CommonFunctions.h  Counters.cpp  Game.cpp  Game.h  GlobalVars.cpp  GlobalVars.h  RaycastVehicleDemo.cpp  Sample.h  Sample.inl  Settings.cpp  Tankist.cpp  Tankist.h  defines.h  glob_engine.cpp  glob_engine.h  glob_game.cpp  glob_game.h  globals.cpp  globals.h  stdafx.h
src/local/Battler/Audio/: AudioCapturer.cpp
src/local/Battler/Audio/Capture/: TWTSound.cpp  TWTSound.h  TWTThreads.cpp  TWTThreads.h  main.cpp
src/local/Battler/Core/: Math.h
src/local/Battler/GUI/: .WindowSettings.cpp.swp  GameGUI.cpp  GameGUI.h  Instructions.cpp  Instructions.h  Logo.cpp  Logo.h  MouseT.cpp  MouseT.h  WindowGameESC.cpp  WindowGameESC.h  WindowSettings.cpp  WindowSettings.h
src/local/Battler/GUI/Elements/: DropDownListButtons.cpp  DropDownListButtons.h  Governor.cpp  Governor.h
src/local/Battler/Graphics/: ImageT.cpp  ImageT.h  ProgressBar.cpp  ProgressBar.h  SpriteT.cpp  SpriteT.h
src/local/Battler/Input/: GameInput.cpp  GameInput.h  IInput.cpp  IInput.h  Input.cpp  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h  MouseT.cpp
src/local/Battler/Interface/: HangarWidgets.cpp  HangarWidgets.h  Settings.cpp  Settings.h
src/local/Battler/Network/: CServer.cpp  CServer.h  Chat.cpp  Chat.h  ChatLog.cpp  ChatLog.h  Client.cpp  Client.h  ClientTCP.cpp  GameMessagesClient.cpp  HandlersNetworkEventsClient.cpp  MainServer.cpp  MainServer.h  Server.cpp  Server.h  ServerTCP.cpp  SocketClientTCP.cpp  SocketServerTCP.cpp  _ClientServer.cpp  _ClientServer.h
src/local/Battler/Objects/: CameraUni.cpp  CameraUni.h  Sight.cpp  Sight.h  Vehicle.cpp  Vehicle.h
src/local/Battler/Objects/Cameras/: MainCamera.cpp  MainCamera.h
src/local/Client/: CMakeLists.txt  Client.cpp  Client.h  globals.cpp  globals.h  stdafx.cpp  stdafx.h
src/local/Tankist/: CMakeLists.txt  Tankist.cpp  Tankist.h  globals.cpp  globals.h  stdafx.h
src/local/Tankist/Interface/: MainWindow.cpp  MainWindow.h  Settings.cpp  Settings.h
src/local/Updater/: CMakeLists.txt  defines.h  globals.cpp  globals.h  main.cpp  stdafx.h
src/local/Updater/Network/: UploaderServer.cpp  UploaderServer.h
src/remote/DataBase/: CMakeLists.txt
src/remote/Master/: CMakeLists.txt  stdafx.h
